# Bachelor_Thesis

./: .gitignore  Justfile  README.md  reflog.txt
kernel-patches/: uio.sha256sum
kernel-patches/dts/: bcm2711-rpi-4-b.dts
kernel-patches/uio/: Kconfig  Makefile
paper/: .gitignore  ideas.md  main.tex  motivation.md  results.md
paper/content/: 01-Intro.tex  02-Setup.tex  02-UIO.tex  03-Implementation.tex  03-UIO.tex  04-Implementation.tex  10-Testing.tex  20-Demonstration.tex  Benchmarks.tex  Limitations.tex  notes.md
paper/template/: credentials.sty  template.sty  templateBA.sty
resources/: info.md
resources/Bio/: Muntermacher Maja ✨.md
resources/NPA/: Cheatsheet.tex  Exercise1.tex  Exercise10.tex  Exercise11.tex  Exercise2.tex  Exercise3.tex  Exercise4.tex  Exercise5.tex  Exercise6.tex  Exercise7.tex  Exercise8.tex  Exercise9.tex  cheatsheet_landscape.tex  next-modules.md  temp-cheatsheet.tex
resources/Wer Anders [IDK WHO]/: Die Kontroverse des Nobelpreises_043245.pptx  berechnung_dichte_milch_rahm_und_volumenstroeme_032148(1).xls
test-runner/: .gitignore  main.py  requirements.txt  settings.py  test_cases.py  test_parameters.py  utils.py
uart-driver/: .gitignore  Cargo.toml  deploy.sh  src.sha256sum
uart-driver/kernel-driver/: 0  listen.py  send.py  str.txt  test-cases  utils.py
uart-driver/src/: cli.rs  constants.rs  lib.rs
uart-driver/src/logger/: loggable.rs  mod.rs  recv_logger.rs  send_logger.rs  thread_local.rs  time.rs
uart-driver/src/uart/: err.rs  logger.rs  mod.rs  packet.rs  read.rs  registers.rs  stats.rs  transmission.rs  uart.rs
(+35 files in other folders)
