[package]
name = "uart"
version = "0.1.0"
edition = "2024"

[lib]
name = "uart_lib"
path = "src/lib.rs"


[dependencies]
tock-registers = "0.10.1"
clap = { version = "4.5.48", features = ["derive"] }
uio = "0.5.2"
log = "0.4.27"
pretty_env_logger = "0.5.0"
once_cell = "1.21.3"
mutually_exclusive_features = "0.1.0"
text-diff = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
bitflags = "2.11.0"
libc = "0.2.175"
nix = "0.31.2"



[build-dependencies]
bindgen = "0.72.1"
cargo_metadata = "0.23.1"


[features]
default = ["performance"]

# === Interrupt Logic ===

# Poll the Registers
driver_polling = []

# Use uio's `irq_wait` to receive interrupts from the Kernel
driver_irq = []


# === IO Logic ===

# Use the AUX_MU_IO_REG for reading bytes
# → requires kernel to disable interrupts before and userspace to enable them after reading a byte
io_data = []

# Use the AUX_MU_SCRATCH for reading bytes
# → requires kernel to read the IO register and drop the byte into the Scratch register.
# Is tied to interrupt handling that code doesn't have to call `irq_enable()`
io_scratch = []


# === Speeding up Baudrate ===

# This disables safety-checks like checking for overruns.
# Also involes trusting that all interrupts are meant for us and once it occurs, there will be a char waiting
# With this feature, the kernel is responsible for detecting overflows by either checking if SCRATCH == 0 or LSR == 0b10
performance = []